feat(auth): 优化 TokenService 和 SysLoginService 中的角色切换逻辑- 在 TokenService 中使用 getFirst() 替代 get(0) 获取第一个角色 - 在 SysLoginService 中注释掉角色切换逻辑，暂时不使用 - 新增 xh-gateway 模块，实现网关鉴权和白名单配置功能